bug: fixed horizontal overflow on portfolio item text

--- a/src/pages/portfolio/Portfolio.module.scss
+++ b/src/pages/portfolio/Portfolio.module.scss
@@ -102,7 +102,7 @@
         display: none;
         position: absolute;
         top: 0;
-        width: $width-full;
+        width: 95%;
         height: 90%;
         background-color: $black-opacity-medium;
         color: $white;
